<resources>
    <string name="app_name">OwnTrain</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="next">Next</string>
    <string name="fullName">Full Name</string>
    <string name="register">Register</string>
    <string name="personal_profile">Personal Profile</string>
</resources>